Fix footer spacing

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 5px;
-  margin-top: -10px;
+  margin-top: 5px;
 }
 
 footer {
@@ -125,7 +125,7 @@ footer {
 }
 
 .footer-notes {
-    margin-top: -15px;
+    margin-top: 5px;
 }
 
 .footer-notes p {
